# research

./: .eslintrc.cjs  .gitignore  TODO  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: azure-static-web-apps-delightful-water-08f43fc0f.yml  azure-static-web-apps-icy-ocean-0c7880b0f.yml  deploy-functions.yml
backend/: function_app.py  functions.py  host.json  main.py  pyproject.toml
backend/answers/: __init__.py
backend/data/: preprocess.py  pyproject.toml
backend/sentences/: __init__.py
src/: App.css  App.tsx  index.css  index.tsx  types.ts
src/assets/: lorem.txt
src/components/: collapsableCard.tsx
src/components/common/: lorem.txt  questions.ts
src/components/examples-tab/: index.tsx  mockSentences.ts
src/components/instructions-tab/: index.tsx
src/components/survey-form/: AttentionCheck.tsx  api.ts  index.tsx  mockSentences.ts  questions.ts  questionsTable.tsx
src/examples-tab/: index.tsx  mockSentences.ts
src/hooks/: useInitialization.ts
src/instructions-tab/: index.css  index.tsx
src/survey-form/: AttentionCheck.tsx  index.tsx  questions.ts  questionsTable.tsx
src/survey-form/components/: ActionButtons.tsx  SentenceDisplay.tsx
src/util/: conllu.ts
src/utils/: api.ts  consts.ts  reducers.ts  timedStorage.ts  types.ts
